--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="top-header">
         <div class="top-header-content">
             <div class="top-left">
-                <img src="images\national_emblem.png"
+                <img src="images\flag.png"
                     alt=" India Flag" class="flag-icon">
                 <span>GOVERNMENT OF INDIA</span>
             </div>
@@ -1234,5 +1234,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
